Basic Setup - Links and Meta tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
+<head>
+	<title>Felipe Ramos | Interface Designer</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta name="description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<meta property="og:title" content="Felipe Ramos"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="feraio.github.io"/>
+	<meta property="og:description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:site" content="@fe410"/>
+	<meta name="twitter:title" content="Felipe Ramos"/>
+	<meta name="twitter:description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<link rel="canonical" href="http://feraio.github.io"/>
+	<link rel="Felipe Ramos" href="https://plus.google.com/+FelipeRamos410"/>
+	<link rel="stylesheet/less" type="text/css" href="style/main.less"/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
+</head>
 <html>
-<body>
-<h1>Felipe Ramos</h1>
-<p>Making things happen</p>
-</body>
+	<body>
+		<h1>Felipe Ramos</h1>
+		<p>Making things happen</p>
+	</body>
 </html>
