minor changes and galleria tests

--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <head>
 	<title>Felipe Ramos | Interface Designer</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<meta name="description" content="User Interface and Creative Designer at Boom Financial Inc."/>
 	<meta property="og:title" content="Felipe Ramos"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="feraio.github.io"/>
-	<meta property="og:description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<meta property="og:description" content="User Interface and Creative Designer at Boom Financial Inc."/>
 	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:site" content="@fe410"/>
 	<meta name="twitter:title" content="Felipe Ramos"/>
-	<meta name="twitter:description" content="Interface Designer and Researcher at Boom Financial Inc. and B.A. Degree in Graphic Design."/>
+	<meta name="twitter:description" content="User Interface and Creative Designer at Boom Financial Inc."/>
 	<link rel="canonical" href="http://feraio.github.io"/>
 	<link rel="Felipe Ramos" href="https://plus.google.com/+FelipeRamos410"/>
 	<link rel="stylesheet/less" type="text/css" href="style/main.less"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+    <script src="galleria/galleria-1.4.2.min.js"></script>
+    <link rel="stylesheet" href="galleria/themes/classic/galleria.classic.css">
+	<script src="galleria/themes/classic/galleria.classic.min.js"></script>
 </head>
 <html>
 	<body>
+<!--
 		<h1>Felipe Ramos</h1>
-		<p>Making things happen</p>
+		<p>User Interface and Creative Designer at Boom Financial Inc.</p>
+-->
+		<div class="galleria">
+			<img src="http://lorempixel.com/1100/400/" />
+			<img src="http://lorempixel.com/600/400/" />
+			<img src="http://lorempixel.com/900/400/" />
+		</div>
+		<script>
+		    Galleria.run('.galleria');
+		</script>
 	</body>
 </html>
