add navbar and change content

--- a/index.html
+++ b/index.html
@@ -37,10 +37,19 @@
 </head>
 <html>
 	<body class="animated fadeIn">
-    <div class="wrapper">
-      <div class="main">
+    <div class="wrapper">    
+      <div class="topnav">
+          <ul>
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">WORK</a></li>
+              <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+        
+        <div class="main">
           
-        <section class="page1">
+        <section class="page1" >
 	        <div class="container">
                 <div class="verticalMiddle">
 	            <h1 class="animated fadeInDown">Felipe Ramos</h1>
@@ -53,9 +62,9 @@
 		      <div class="container">
                   <div class="verticalMiddle">
                   <h2>ABOUT ME</h2>
-                  <p>After discovering a new career called Design in late 2007, I started to study it and work with print and digital medias in 2008.</p>
+                  <p>As a Design enthusiast, I started to study Web Design in early 2008 and never stopped.</p>
                   <p>Over the years I’ve been working  mostly as an User Interface designer helping companies improve products, services and systems to be more attractive and useful for people, increasing their business performance.</p>
-                  <p>I’m currently part of a powerful technology team at Boom Financial Inc. as UI and UX Designer.</p>
+                  <p>I’m currently part of an international and powerful technology team at Boom Financial Inc. as UI and UX Designer.</p>
                   </div>
 		      </div>
 	      </section>
