--- a/index.html
+++ b/index.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
 <head>
-	<title>Felipe Ramos | UI Designer</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta name="description" content="UI Designer and UX Enthusiast"/>
-	<meta property="og:title" content="Felipe Ramos"/>
-	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="feliperamos.me"/>
-	<meta property="og:description" content="UI Designer and UX Enthusiast"/>
-	<meta name="twitter:card" content="summary"/>
-	<meta name="twitter:site" content="@fe410"/>
-	<meta name="twitter:title" content="Felipe Ramos"/>
-	<meta name="twitter:description" content="UI Designer and UX Enthusiast"/>
-	<link rel="canonical" href="http://feliperamos.me"/>
-	<link rel="Felipe Ramos" href="https://plus.google.com/+FelipeRamos410"/>
-	<link rel="stylesheet/less" type="text/css" href="css/main.less"/>
-    <link rel="stylesheet/less" type="text/css" href="css/animations.min.css"/>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
-    <script type="text/javascript" src="js/jquery-2.1.4.js"></script>
-    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
-    <script>
-	  $(document).ready(function(){
-      $(".main").onepage_scroll({
-        sectionContainer: "section",
-        responsiveFallback: 600,
-        loop: false
-      });
-		});
-	</script>
+  <title>Felipe Ramos | UI Designer</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="UI Designer and UX Enthusiast"/>
+  <meta property="og:title" content="Felipe Ramos"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="feliperamos.me"/>
+  <meta property="og:description" content="UI Designer and UX Enthusiast"/>
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@fe410"/>
+  <meta name="twitter:title" content="Felipe Ramos"/>
+  <meta name="twitter:description" content="UI Designer and UX Enthusiast"/>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/socicon/css/socicon.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/animate.css/animate.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/additional/css/style.css" type="text/css">
+  <link rel="stylesheet" href="assets/additional/css/mbr-additional.css" type="text/css">
+  <link rel="canonical" href="http://feliperamos.me"/>
 </head>
-<html>
-	<body class="animated fadeIn">
-    <div class="wrapper">    
-        <div class="main">
-        <section class="page1" >
-	        <div class="container">
-                <div class="verticalMiddle">
-                    <h2>Thanks for stopping by!</h2>
-                  <p>Although this website is not quite done yet, you can find out more about me and my work on my <a href="https://www.linkedin.com/in/feraio">Linkedin</a> or <a href="mailto:fe10.santosramos@gmail.com">message me</a> so that we can get in touch. 
-<br>You can also check some of the stuff I write about UI and UX Design on my <a href="https://ramosfelipe.wordpress.com/">blog</a>.</p>
-                <div class="icon-list">
-                    <a href="mailto:fe10.santosramos@gmail.com" title="Email" class="icons email">Email</a>
-                    <a href="https://twitter.com/fe410" title="Twitter" class="icons twitter">Twitter</a>
-                    <a href="https://www.linkedin.com/in/feraio" title="Linkedin" class="icons linkedin">Linkedin</a>
-                    <a href="https://ramosfelipe.wordpress.com/" title="Blog" class="icons blog">Blog</a>
+<body>
+<section class="mbr-box mbr-section mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header1-4" style="background-image: url(assets/images/bg-header.jpg); background-color: transparent;">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+        <div class="mbr-overlay" style="opacity: 0.7; background-image: none; background-color: rgb(124, 112, 107);"></div>
+        <div class="mbr-box__container mbr-section__container container">
+            <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
+                <div class="mbr-hero animated fadeInUp">
+                    <h1 class="mbr-hero__text">THANKS FOR STOPPING BY!</h1>
+                    <p class="mbr-hero__subtext">Although this website is not quite done yet, you can find out more about me and my work on my <a href="https://www.linkedin.com/in/feraio" target="_blank">Linkedin</a> or <a href="mailto:fe10.santosramos@gmail.com">message me</a>.
+                    <br>
+                    You can also check some of the stuff I write about UI and UX Design on my <a href="https://ramosfelipe.wordpress.com" target="_blank">blog</a>.</p>
                 </div>
-                  </div>
-	  	    </div>
-        </section>          
-	    </div>
-	  </div>
-	</body>
+                <div class="mbr-buttons btn-inverse mbr-buttons--center">
+                  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-default" href="mailto:fe10.santosramos@gmail.com">EMAIL</a> 
+                  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-default" href="https://linkedin.com/in/feraio">LINKEDIN</a>
+                  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-default" href="https://twitter.com/fe410">TWITTER</a>
+                  <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-blog" href="https://ramosfelipe.wordpress.com">BLOG</a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+</section>
+<script src="assets/jquery/jquery.min.js" type="text/javascript"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/jquery-parallax/jquery.parallax.js" type="text/javascript"></script>
+</body>
 </html>
