--- a/sharepop/refer-friend.html
+++ b/sharepop/refer-friend.html
@@ -8,11 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
+	<link rel="stylesheet" media="screen" href="./files/css.css">
 	<link rel="stylesheet" media="screen" href="./files/application-85564b9a9637cb8d00890863fc031e26.css">
 	<!-- <script src="./files/modernizr-7da40eb3f2affc5b3d06df578fe86a47.js"></script>
 	<meta name="csrf-param" content="authenticity_token">
 	<meta name="csrf-token" content="3s/4P+uzleOtqChUlyV5bKQC4PAVgiNvCMsnfeJMnyez3spub9JSIcaPSOtG3oY+OZlHYq6coX1TK2HxtJD1+w=="> -->
-	<link rel="stylesheet" media="screen" href="./files/css">
 	<link rel="shortcut icon" type="image/x-icon" href="http://cdn.sharepop.com/assets/live/favicons/favicon-ea9332ecc7c229b93df47ba9f862d8a6.ico">
 	<link rel="apple-touch-icon" type="image/png" href="http://cdn.sharepop.com/assets/live/favicons/apple-touch-icon-36870c9d726b602548b22521f92417aa.png">
 	<meta class="foundation-data-attribute-namespace">
