--- a/sharepop/campaigns.html
+++ b/sharepop/campaigns.html
@@ -281,7 +281,7 @@
 
 		          </div>
 		        </div>
-		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col">
+		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col2">
 		            <h4 class="text-center coins-count">
 		                <span class="label radius secondary">iOS</span>
 		                <strong>80</strong>
@@ -330,7 +330,7 @@
 
 		          </div>
 		        </div>
-		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col">
+		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col2">
 		            <h4 class="text-center coins-count">
 		                <span class="label radius secondary">iOS</span>
 		                <strong>40</strong>
@@ -434,7 +434,7 @@
 
 		          </div>
 		        </div>
-		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col">
+		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col2">
 		            <h4 class="text-center coins-count">
 		                <span class="label radius secondary">iPhone</span>
 		                <strong>150</strong>
@@ -538,7 +538,7 @@
 
 		          </div>
 		        </div>
-		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col">
+		        <div class="show-for-medium-up small-3 medium-4 large-3 column coins-col2">
 		            <h4 class="text-center coins-count">
 		                <span class="label radius secondary">iOS</span>
 		                <strong>100</strong>
