--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="assets/images/feliperamos.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/feliperamos.ico" type="image/x-icon">
   </head>
-  <body>
+  <body class="animated fadeIn">
 
     <section class="mbr-navbar mbr-navbar--absolute mbr-navbar--transparent mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-0">
       <div class="mbr-navbar__section mbr-section">
@@ -51,7 +51,8 @@
                       <a class="mbr-buttons__link btn text-white" href="index.html#about">ABOUT</a>
                     </li>
                     <li class="mbr-navbar__item">
-                      <a class="mbr-buttons__link btn text-white" href="index.html#work">WORK</a>
+                      <!-- <a class="mbr-buttons__link btn text-white" href="index.html#work">WORK</a> -->
+                      <a class="mbr-buttons__link btn text-white" type="button" data-toggle="modal" data-target="#workModal">WORK</a>
                     </li>
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-white" href="index.html#contact">CONTACT</a>
@@ -71,7 +72,7 @@
         <div class="mbr-box__container mbr-section__container container">
           <div class="mbr-box mbr-box--stretched">
             <div class="mbr-box__magnet mbr-box__magnet--center-center">
-              <div class="mbr-hero animated fadeInUp">
+              <div class="mbr-hero animated fadeInUp delay">
                 <h1 class="mbr-hero__text">FELIPE RAMOS</h1>
                 <p class="mbr-hero__subtext">Interface and Experience Designer</p>
               </div>
@@ -88,12 +89,14 @@
             <div class="mbr-box__magnet mbr-box__magnet--center-center">
               <div class="mbr-hero animated fadeInUp">
                 <h1 class="mbr-hero__text">ABOUT ME</h1>
-                <p class="mbr-hero__subtext">Sports and nature lover, I use my creativity and motivational skills to try to be a superhero to my two younger sisters and my three dogs.
+                <p class="mbr-hero__subtext"><strong><span style="font-size: 24px;">"The best superhero in the world!"</span></strong>
                 <br>
-                <br>
+                <span style="font-size: 12px;"><em>- My two younger sisters about me</em></span>
+                <br><br>
                 I am a 22-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures and awesome creative minds. I'm always looking for a great opportunity to learn and work with interesting people from different places around the world.
                 <br><br>
-                You can also <a href="about.html" class="text-warning">read more about me</a>.
+                <!-- You can also <a href="about.html" class="text-warning">read more about me</a>. -->
+                For now, you can read more about me on my <a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile.
                 </p>
               </div>
             </div>
@@ -102,7 +105,7 @@
       </div>
     </section>
 
-    <section class="mbr-section" id="work">
+   <!--  <section class="mbr-section" id="work">
       <div class="mbr-section__container container mbr-section__container--custom-padding">
         <div class="mbr-header row">
           <div class="col-sm-8 col-sm-offset-2">
@@ -125,26 +128,26 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
               <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/333">
+                <img alt="" src="http://placehold.it/800x540/777">
                 <span class="icon projects">Project Name</span>
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
               <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/333">
+                <img alt="" src="http://placehold.it/800x540/111">
                 <span class="icon projects">Project Name</span>
               </a>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
               <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/333">
+                <img alt="" src="http://placehold.it/800x540/999">
                 <span class="icon projects">Project Name</span>
               </a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contact">
         <div class="mbr-section__container mbr-section__container--std-padding container">
@@ -182,7 +185,7 @@
       <div class="mbr-section__container container">
         <div class="mbr-footer row">
           <div class="col-sm-6">
-            <p class="mbr-footer__copyright left-side">Made with ❤ in 2015</p>
+            <p class="mbr-footer__copyright left-side">Made with ❤ v0.9</p>
           </div>
           <div class="col-sm-6">
             <p class="mbr-footer__copyright right-side">
@@ -205,6 +208,22 @@
     <script src="assets/content/js/script.js"></script>
     <script src="assets/content-gallery/script.js"></script>
     <script src="assets/formoid/formoid.min.js"></script>  
-
+    <!-- Modal -->
+                <div class="modal fade" id="workModal" tabindex="1" role="dialog" aria-labelledby="workModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="workModalLabel">Oops! This section is not available yet!</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p>Although this section is not quite done yet, you can find out more about my work following the button below.</p>
+                        <div class="mbr-buttons mbr-buttons--center">
+                        <a href="https://goo.gl/jntQGc" class="mbr-buttons__btn btn btn-lg btn-warning">PROJECTS SUMMARY
+                        </a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
   </body>
 </html>
