--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/animate.css/animate.min.css">
     <link rel="stylesheet" href="assets/content/css/style.css">
-    <link rel="stylesheet" href="assets/content-slider/style.css">
-    <link rel="stylesheet" href="assets/content-gallery/style.css">
     <link rel="stylesheet" href="assets/content/css/mbr-additional.css" type="text/css">
     <link rel="shortcut icon" href="assets/images/feliperamos.ico" type="image/x-icon">
     <link rel="icon" href="assets/images/feliperamos.ico" type="image/x-icon">
@@ -66,7 +64,7 @@
       </div>
     </section>
 
-    <section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header" style="background-image: url(assets/images/dsc52707360x4912-1782000x1335-163.jpg);">
+    <section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header" style="background-image: url(assets/images/bg-header.jpg);">
       <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(69, 69, 69);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -93,8 +91,11 @@
                 <br>
                 <span style="font-size: 12px;"><em>- My two younger sisters about me</em></span>
                 <br><br>
-                I am a 22-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures and awesome creative minds. I'm always looking for a great opportunity to learn and work with interesting people from different places around the world.
-                <br><br>
+                I am a 22-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures and awesome creative minds.
+                <br>
+                I'm always looking for a great opportunity to learn and work with interesting people from different places around the world.
+                <br>
+                <br>
                 <!-- You can also <a href="about.html" class="text-warning">read more about me</a>. -->
                 For now, you can read more about me on my <a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile.
                 </p>
@@ -104,50 +105,6 @@
         </div>
       </div>
     </section>
-
-   <!--  <section class="mbr-section" id="work">
-      <div class="mbr-section__container container mbr-section__container--custom-padding">
-        <div class="mbr-header row">
-          <div class="col-sm-8 col-sm-offset-2">
-            <h3 class="mbr-hero__text">WORK</h3>
-            <p class="mbr-hero__subtext">A collection of the main projects that I've worked with.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="mbr-gallery mbr-section mbr-section--no-padding" id="gallery1-4">
-      <div class="mbr-gallery-layout-default">
-        <div>
-          <div class="row mbr-gallery-row no-gutter">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
-              <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/333">
-                <span class="icon projects">Project Name</span>
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
-              <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/777">
-                <span class="icon projects">Project Name</span>
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
-              <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/111">
-                <span class="icon projects">Project Name</span>
-              </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mbr-gallery-item">
-              <a href="work-template.html" class="inactive">
-                <img alt="" src="http://placehold.it/800x540/999">
-                <span class="icon projects">Project Name</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contact">
         <div class="mbr-section__container mbr-section__container--std-padding container">
@@ -185,7 +142,7 @@
       <div class="mbr-section__container container">
         <div class="mbr-footer row">
           <div class="col-sm-6">
-            <p class="mbr-footer__copyright left-side">Made with ❤ v0.9</p>
+            <p class="mbr-footer__copyright left-side">Made with ❤ v0.9 Pre-release</p>
           </div>
           <div class="col-sm-6">
             <p class="mbr-footer__copyright right-side">
@@ -202,28 +159,25 @@
     <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/smooth-scroll/SmoothScroll.js"></script>
-    <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
-    <script src="assets/masonry/masonry.pkgd.min.js"></script>
-    <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="assets/content/js/script.js"></script>
-    <script src="assets/content-gallery/script.js"></script>
     <script src="assets/formoid/formoid.min.js"></script>  
+                
     <!-- Modal -->
-                <div class="modal fade" id="workModal" tabindex="1" role="dialog" aria-labelledby="workModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="workModalLabel">Oops! This section is not available yet!</h4>
-                      </div>
-                      <div class="modal-body">
-                        <p>Although this section is not quite done yet, you can find out more about my work following the button below.</p>
-                        <div class="mbr-buttons mbr-buttons--center">
-                        <a href="https://goo.gl/jntQGc" class="mbr-buttons__btn btn btn-lg btn-warning">PROJECTS SUMMARY
-                        </a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+    <div class="modal fade" id="workModal" tabindex="1" role="dialog" aria-labelledby="workModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="workModalLabel">Oops! This section is not available yet!</h4>
+          </div>
+          <div class="modal-body">
+            <p>Although this section is not quite done yet, you can find out more about my work following the button below.</p>
+            <div class="mbr-buttons mbr-buttons--center">
+            <a href="https://goo.gl/jntQGc" class="mbr-buttons__btn btn btn-lg btn-warning">PROJECTS SUMMARY
+            </a></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
