changed dash character :)

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h1 class="mbr-hero__text">ABOUT ME</h1>
                 <p class="mbr-hero__subtext"><strong><span style="font-size: 24px;">"The best superhero in the world!"</span></strong>
                 <br>
-                <span style="font-size: 12px;"><em>- My two younger sisters about me</em></span>
+                <span style="font-size: 12px;"><em>— My two younger sisters about me</em></span>
                 <br><br>
                 I am a 22-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures and awesome creative minds.
                 <br>
