UPDATE - 2017 first commit <3

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-white" href="index.html#about">ABOUT</a>
                     </li>
-                    <li class="mbr-navbar__item">
-                      <!-- <a class="mbr-buttons__link btn text-white" href="index.html#work">WORK</a> -->
+                    <!-- <li class="mbr-navbar__item">
+                      XXX <a class="mbr-buttons__link btn text-white" href="index.html#work">WORK</a> XXX
                       <a class="mbr-buttons__link btn text-white" type="button" data-toggle="modal" data-target="#workModal">WORK</a>
-                    </li>
-                    <li class="mbr-navbar__item">
-                      <a class="mbr-buttons__link btn text-white" href="index.html#contact">CONTACT</a>
-                    </li>
+                    </li> -->
+                    <!-- <li class="mbr-navbar__item">
+                      <a class="mbr-buttons__link btn text-white" href="index.html#about">CONTACT</a>
+                    </li> -->
                   </ul>
                 </div>
               </nav>
@@ -96,13 +96,15 @@
                 <br>
                 <span style="font-size: 12px;"><em>— My two younger sisters about me</em></span>
                 <br><br>
-                I am a 22-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures and awesome creative minds.
+                I am a 24-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures, beautiful places and awesome creative minds. I really like sports and travel, you can always find me playing soccer, skating or taking a great picture from some natural landscape. 
                 <br>
-                I'm always looking for a great opportunity to learn and work with interesting people from different places around the world.
+                I graduated in Graphic Design at Faculdade Paulista de Artes, São Paulo, and kept improving my knowledge doing other types of courses about Usability, Interface Design, Web Development and Web Design. I'm always looking for a great opportunity to learn and work with interesting people from different places around the world. 
+                <br>
+                During the last years working with Digital Products (e-Commerce, Saas, Mobile Apps) I could learn and design interesting 
                 <br>
                 <br>
                 <!-- You can also <a href="about.html" class="text-warning">read more about me</a>. -->
-                For now, you can read more about me on my <a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile.
+                While the<strong>Work</strong> page is being redesigned, you can see more details about my experience on my<a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile or <a href="mailto:fe10.santosramos@gmail.com" class="text-warning">send me an email</a>.
                 </p>
               </div>
             </div>
@@ -111,7 +113,7 @@
       </div>
     </section>
 
-    <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contact">
+    <!-- <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contact">
         <div class="mbr-section__container mbr-section__container--std-padding container">
             <div class="row">
                 <div class="col-sm-12">
@@ -119,7 +121,7 @@
                         <div class="col-sm-8 col-sm-offset-2" data-form-type="formoid">
                             <div class="mbr-header mbr-header--center">
                                 <h2 class="mbr-header__text">CONTACT</h2>
-                                <p class="mbr-hero__subtext">Feel free to tell me about your project or send an email to <a class="text-warning" href="mailto:felipe@feliperamos.me">felipe@feliperamos.me</a>.</p>
+                                <p class="mbr-hero__subtext">Feel free to tell me about your project or send an email to <a class="text-warning" href="mailto:fe10.santosramos@gmail.com">fe10.santosramos@gmail.com</a>.</p>
                             </div>
                             <div data-form-alert="true"></div>
                             <form method="post" data-form-title="CONTACT">
@@ -141,7 +143,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer">   
       <div class="mbr-section__container container">
@@ -167,19 +169,19 @@
     <script src="assets/content/js/script.js"></script>
     <script src="assets/formoid/formoid.min.js"></script>
     <!-- Testing Hotjar Tracking Service -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:91253,hjsv:5};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+	<script>
+	    (function(h,o,t,j,a,r){
+	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+	        h._hjSettings={hjid:91253,hjsv:5};
+	        a=o.getElementsByTagName('head')[0];
+	        r=o.createElement('script');r.async=1;
+	        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+	        a.appendChild(r);
+	    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
 
                 
-    <!-- Modal -->
+    <!-- XXX Modal XXX
     <div class="modal fade" id="workModal" tabindex="1" role="dialog" aria-labelledby="workModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -195,6 +197,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
