--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@
                 <span style="font-size: 12px;"><em>— My two younger sisters about me</em></span>
                 <br><br>
                 I am a 24-years-old Designer from Brazil, a beautiful and unique country that hosts multiple cultures, beautiful places and awesome creative minds. I really like sports and travel, you can always find me playing soccer, skating or taking a great picture from some natural landscape. 
-                <br>
+                <br><br>
                 I graduated in Graphic Design at Faculdade Paulista de Artes, São Paulo, and kept improving my knowledge doing other types of courses about Usability, Interface Design, Web Development and Web Design. I'm always looking for a great opportunity to learn and work with interesting people from different places around the world. 
-                <br>
+                <br><br>
                 During the last years working with Digital Products (e-Commerce, Saas, Mobile Apps) I could learn and design interesting 
-                <br>
-                <br>
+                <br><br>
                 <!-- You can also <a href="about.html" class="text-warning">read more about me</a>. -->
-                While the<strong>Work</strong> page is being redesigned, you can see more details about my experience on my<a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile or <a href="mailto:fe10.santosramos@gmail.com" class="text-warning">send me an email</a>.
+                While the Work page is being redesigned, you can see more details about my experience on my <a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile or <a href="mailto:fe10.santosramos@gmail.com" class="text-warning">send me an email</a>.
                 </p>
               </div>
             </div>
@@ -149,7 +148,7 @@
       <div class="mbr-section__container container">
         <div class="mbr-footer row">
           <div class="col-sm-6">
-            <p class="mbr-footer__copyright left-side">Made with ❤ v0.9 Pre-release</p>
+            <p class="mbr-footer__copyright left-side">Made with ❤ v2017.1</p>
           </div>
           <div class="col-sm-6">
             <p class="mbr-footer__copyright right-side">
