--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <br><br>
                 I graduated in Graphic Design at Faculdade Paulista de Artes, São Paulo, and kept improving my knowledge doing other types of courses about Usability, Interface Design, Web Development and Web Design. I'm always looking for a great opportunity to learn and work with interesting people from different places around the world. 
                 <br><br>
-                During the last years working with Digital Products (e-Commerce, Saas, Mobile Apps) I could learn and design interesting 
+                During the last years working with Digital Products (e-Commerce, Saas, Mobile Apps) I could learn and design interesting things, helping users and companies to do what they have to do with the easiest and best way as possible. That's what I fight for.
                 <br><br>
                 <!-- You can also <a href="about.html" class="text-warning">read more about me</a>. -->
                 While the Work page is being redesigned, you can see more details about my experience on my <a href="http://linkedin.com/in/feraio" class="text-warning">Linkedin</a> profile or <a href="mailto:fe10.santosramos@gmail.com" class="text-warning">send me an email</a>.
