--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="mbr-section__container container">
         <div class="mbr-footer row">
           <div class="col-sm-6">
-            <p class="mbr-footer__copyright left-side">Made with ❤ v2017.1</p>
+            <p class="mbr-footer__copyright left-side">Temp. Version - 2015</p>
           </div>
           <div class="col-sm-6">
             <p class="mbr-footer__copyright right-side">
