--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                     <a href="#home">Home</a>
                   </li>
                   <!-- <li>
-                    <a href="#works">Works</a>
+                    <a href="#works">Work</a>
                   </li> -->
                   <li class="disabled">
-                    <a>Works</a>
+                    <a>Work</a>
                   </li>
                   <li>
                     <a href="#about">About</a>
