Open Graphs and Contact
- og:image update
- og:image:alt added

- contact numbers

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <meta property="og:url" content="http://feliperamos.me/"/>
   <meta property="og:description" content="Felipe Ramos is a Product Designer from Brazil."/>
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="http://feliperamos.me/assets/images/bg-header.jpg">
+  <meta property="og:image" content="http://feliperamos.me/img/main_dark-theme.jpg">
+  <meta property="og:image:alt" content="Felipe Ramos, Product Designer in New York city.">
   <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="2000">
-  <meta property="og:image:height" content="1335">
+  <meta property="og:image:width" content="1920">
+  <meta property="og:image:height" content="1235">
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@fe410"/>
   <meta name="twitter:title" content="FELIPE RAMOS"/>
@@ -582,7 +583,8 @@
                 <i class="icon icon-Phone"></i>
               </div>
               <h6>Call Me</h6>
-              <span>+55 11 997 586 787</span>
+              <span>+1 323 531 8571 
+              <br>+55 11 997 586 787</span>
             </div>
 
             <div class="contact-item">
