--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="hero-holder">
           <div class="hero-message text-rotator">
             <h1><span class="rotate">Product Designer, Soccer Player, Jedi Cosplayer</span></h1>
-            <h2 class="hero-subtitle hidden-xs">Travel fanatic, always looking for an opportunity to make new friends around the world. Experienced with digital products design.<h2>
+            <h2 class="hero-subtitle">Travel fanatic, always looking for an opportunity to make new friends around the world. Experienced with digital products design.<h2>
             <div class="local-scroll">
               <a href="#intro" class="scroll-down">
                 <i class="fa fa-angle-down"></i>
@@ -435,8 +435,7 @@
 
 
     <!-- Process -->
-    <!-- <section class="section-wrap process" style="background-image: url(img/process_bg.jpg)"> -->
-    <section class="section-wrap process" style="background-color: #212121; ">
+    <section class="section-wrap process" style="background-image: url(img/background-desk_mask.jpg)">
       <div class="container">
 
         <div class="row heading">
@@ -512,7 +511,7 @@
 							<p>Over the last 5 years I've been in touch with User Experience concepts and processes, working with a user centered and data-driven design approaches for KPIs and OKRs, from all steps of a product lifetime, since its concepts, hypothesis, prototyping, interaction design, user testing and validation methods.</p>
 							<p>I have experience providing data for the stakeholders, being the bridge between product/business and development teams.</p>
 							<br>
-							<p><strong>You can <a href="#">download</a> my resume or check my <a href="https://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
+							<p><strong>You can <a href="download/Felipe Ramos-Resume_ENG.pdf" target="_blank">download</a> my resume or check my <a href="https://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
             </div>
           </div>
 
@@ -556,7 +555,7 @@
 
 
     <!-- Contact -->
-    <section class="section-wrap contact" id="contact">
+    <section class="section-wrap contact bg-light" id="contact">
       <div class="container">
 
         <div class="row heading">
