--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="row heading">
           <div class="col-md-6 col-md-offset-3">
             <h2 class="text-center bottom-line">Experience</h2>
-            <p class="subheading text-center">Continuously improving Design skills and knowledge in related areas.</p>
+            <p class="subheading text-center">Continuously improve in Design skills and knowledge in related areas.</p>
           </div>
         </div>
 
