minor content fixes

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <i class="icon icon-Bulb hi-icon"></i>
               </a>
               <h3>Great Design</h3>
-              <p>Create things that have a great look and feel, beyond that being easy to use and understand. Every pixel has your own meaning and objective on the screen.</p>     
+              <p>Create things that have a great look and feel, that are also easy to use and understand. Every pixel has your own meaning and objective on the screen.</p>     
             </div>            
           </div> 
 
@@ -283,10 +283,10 @@
           <div class="col-md-4 service-item">
             <div class="service-item-box icon-effect-1 icon-effect-1a text-center">
               <a>
-                <i class="icon icon-DesktopMonitor hi-icon"></i>
+                <i class="icon icon-Users hi-icon"></i>
               </a>
               <h3>Team Player</h3>
-              <p>Work as a team on agile and lean environment is a good opportunity to build great products, with multiple experiences and points of view.</p>     
+              <p>Working as a team on agile and lean environment is a good opportunity to build great products, with multiple experiences and points of view.</p>     
             </div>            
           </div> 
           
@@ -505,7 +505,7 @@
           <div class="col-sm-6">
             <div class="about-description mt-30">
               <h4>About Me</h4>
-              <p>With more than 8 years experience in Design and related areas, I specialized in interaction and experience design for digital products and services.</p>
+              <p>With almost ten years experience in Design and related areas, I specialized in interaction and experience design for digital products and services.</p>
 							<p>I had the opportunity to work with international and multicural teams from around the world, with different and interesting methods, learning how different points of view can be helpful to design better solutions.</p>
 							<p>I have experience with interface design, prototyping and hands-on work with HTML and CSS, always looking forward for new trending technologies and frameworks.</p>
 							<p>Over the last 5 years I've been in touch with User Experience concepts and processes, working with a user centered and data-driven design approaches for KPIs and OKRs, from all steps of a product lifetime, since its concepts, hypothesis, prototyping, interaction design, user testing and validation methods.</p>
