--- a/gopro.html
+++ b/gopro.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <meta name="description" content="Product Designer">
-  <meta property="og:title" content="Product Designer"/>
+  <meta name="description" content="GoPro iOS Redesign by Felipe Ramos">
+  <meta property="og:title" content="GoPro iOS Redesign"/>
   <meta property="og:site_name" content="FELIPE RAMOS"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://feliperamos.me/"/>
-  <meta property="og:description" content="Felipe Ramos is a Product Designer from Brazil."/>
+  <meta property="og:url" content="http://feliperamos.me/gopro.html"/>
+  <meta property="og:description" content="GoPro iOS Redesign by Felipe Ramos"/>
   <meta property="og:locale" content="en_US">
-  <meta property="og:image" content="http://feliperamos.me/img/main_dark-theme.jpg">
-  <meta property="og:image:alt" content="Felipe Ramos, Product Designer in New York city.">
+  <meta property="og:image" content="http://feliperamos.me/sketch/gopro/gopro-main.jpg">
+  <meta property="og:image:alt" content="User holding redesigned GoPro app by Felipe Ramos">
   <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="1920">
-  <meta property="og:image:height" content="1235">
+  <meta property="og:image:width" content="1440">
+  <meta property="og:image:height" content="960">
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@fe410"/>
   <meta name="twitter:title" content="FELIPE RAMOS"/>
-  <meta name="twitter:description" content="Product Designer"/>
+  <meta name="twitter:description" content="GoPro iOS Redesign by Felipe Ramos"/>
   <link rel="canonical" href="http://feliperamos.me"/>
 
   <!-- Google Fonts -->
