--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="hero-holder">
           <div class="hero-message text-rotator">
             <h1><span class="rotate">Product Designer, Soccer Player, Jedi Cosplayer</span></h1>
-            <h2 class="hero-subtitle">Travel fanatic, always looking for an opportunity to make new friends around the world. Experienced with digital products design.<h2>
+            <h2 class="hero-subtitle">Travel fanatic, always looking for an opportunity to make new friends around the world. Experienced with digital products design.</h2>
             <div class="local-scroll">
               <a href="#intro" class="scroll-down">
                 <i class="fa fa-angle-down"></i>
