--- a/404.html
+++ b/404.html
@@ -135,14 +135,14 @@
 
   <div class="main-wrapper-onepage main oh">
 
-    <!-- Text Rotator -->
-    <section class="hero-wrap text-center" style="background-image: url(img/main_dark-theme.jpg)">
+    <!-- Page Title -->
+    <section class="hero-wrap text-center" style="background-image: url(img/main_alt-theme_16x9.jpg)">
 
       <div class="container container-full-height">
         <div class="hero-holder">
           <div class="hero-message text-rotator">
-            <h1><span>Page not found</span></h1>
-            <h2 class="hero-subtitle">Ops! The page you tried is not available. Use the menu bar to navigate through pages.</h2>
+            <h1 class="std-shadow"><span>Page not found</span></h1>
+            <h2 class="hero-subtitle std-shadow"><strong>Ops! The page you tried is not available. Use the menu bar to navigate.</strong></h2>
           </div>
         </div>
       </div>
