roll back - about.html

--- a/about.html
+++ b/about.html
@@ -27,23 +27,23 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet'>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../css/magnific-popup.css" />
-  <link rel="stylesheet" href="../css/font-icons.css" />
-  <link rel="stylesheet" href=".../revolution/css/settings.css" />
-  <link rel="stylesheet" href="../css/rev-slider.css" />
-  <link rel="stylesheet" href="../css/sliders.css">
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css/responsive.css" />
-  <link rel="stylesheet" href="../css/spacings.css" />
-  <link rel="stylesheet" href="../css/animate.css" />
-  <link rel="stylesheet" href="../css/color.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/magnific-popup.css" />
+  <link rel="stylesheet" href="css/font-icons.css" />
+  <link rel="stylesheet" href="revolution/css/settings.css" />
+  <link rel="stylesheet" href="css/rev-slider.css" />
+  <link rel="stylesheet" href="css/sliders.css">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
+  <link rel="stylesheet" href="css/spacings.css" />
+  <link rel="stylesheet" href="css/animate.css" />
+  <link rel="stylesheet" href="css/color.css" />
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="../img/favicon.ico">
-  <link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../img/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../img/apple-touch-icon-114x114.png">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
 </head>
 
@@ -89,7 +89,7 @@
                 <ul class="nav navbar-nav local-scroll text-center">
 
                   <li>
-                    <a href="../index.html">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <!-- <li>
                     <a href="#works">Work</a>
@@ -136,7 +136,7 @@
   <div class="main-wrapper-onepage main oh">
 
     <!-- Text Rotator -->
-    <section class="hero-wrap text-center" style="background-image: url(../img/main_light-theme.jpg)">
+    <section class="hero-wrap text-center" style="background-image: url(img/main_light-theme.jpg)">
 
       <div class="container container-full-height">
         <div class="hero-holder">
@@ -196,7 +196,7 @@
               <p>Over the last 5 years I've been in touch with User Experience concepts and processes, working with a user centered and data-driven design approaches for KPIs and OKRs, from all steps of a product lifetime, since its concepts, hypothesis, prototyping, interaction design, user testing and validation methods.</p>
               <p>I have experience providing data for the stakeholders, being the bridge between product/business and development teams.</p>
               <br>
-              <p><strong>You can <a href="../download/Felipe Ramos-Resume_ENG.pdf" target="_blank">download</a> my resume or check my <a href="https://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
+              <p><strong>You can <a href="download/Felipe Ramos-Resume_ENG.pdf" target="_blank">download</a> my resume or check my <a href="https://www.linkedin.com/in/feraio/" target="_blank">LinkedIn</a> profile for detailed education and work experience information.</strong>
             </div>
           </div>
 
@@ -320,7 +320,7 @@
 
 
     <!-- Process -->
-    <section class="section-wrap process" style="background-image: url(../img/background-desk_mask.jpg)">
+    <section class="section-wrap process" style="background-image: url(img/background-desk_mask.jpg)">
       <div class="container">
 
         <div class="row heading">
@@ -485,28 +485,28 @@
   </div> <!-- end main-wrapper -->
   
   <!-- jQuery Scripts -->
-  <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
-  <script type="text/javascript" src="../js/gmap3.js"></script>
-  <script type="text/javascript" src="../js/plugins.js"></script>
-  <script type="text/javascript" src="../revolution/js/jquery.themepunch.tools.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/jquery.themepunch.revolution.min.js"></script>
-  <script type="text/javascript" src="../js/rev-slider.js"></script>
-  <script type="text/javascript" src="../js/scripts.js"></script>
+  <script type="text/javascript" src="js/gmap3.js"></script>
+  <script type="text/javascript" src="js/plugins.js"></script>
+  <script type="text/javascript" src="revolution/js/jquery.themepunch.tools.min.js"></script>
+  <script type="text/javascript" src="revolution/js/jquery.themepunch.revolution.min.js"></script>
+  <script type="text/javascript" src="js/rev-slider.js"></script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 
   
 
 
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.video.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.actions.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.migration.min.js"></script>
-  <script type="text/javascript" src="../revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.video.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.actions.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.migration.min.js"></script>
+  <script type="text/javascript" src="revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 
 
 </body>
