--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <a>Work</a>
                   </li>
                   <li>
-                    <a href="about">About</a>
+                    <a href="about.html">About</a>
                   </li>                         
                   <li class="disabled">
                     <a>Blog</a>
