about href fixes

--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
               <!-- Logo -->
               <div class="logo-container">
                 <div class="logo-wrap local-scroll">
-                  <a href="../index.html">
+                  <a href="../">
                     <img class="logo" src="../img/logo.png" alt="logo">
                   </a>
                 </div>
@@ -89,7 +89,7 @@
                 <ul class="nav navbar-nav local-scroll text-center">
 
                   <li>
-                    <a href="../index.html">Home</a>
+                    <a href="../">Home</a>
                   </li>
                   <!-- <li>
                     <a href="#works">Work</a>
